src/test/ui/xc-private-method2.stderr
error[E0624]: associated function `meth_struct` is private
  --> $DIR/xc-private-method2.rs:6:52
   |
LL |     let _ = xc_private_method_lib::Struct{ x: 10 }.meth_struct();
   |                                                    ^^^^^^^^^^^ private associated function

error[E0624]: associated function `meth_enum` is private
  --> $DIR/xc-private-method2.rs:9:55
   |
LL |     let _ = xc_private_method_lib::Enum::Variant1(20).meth_enum();
   |                                                       ^^^^^^^^^ private associated function

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0624`.
